implemented bulk bonus points addition
